packages/jsts/tests/dbd/benchmark/SyntaxError/S01 JSON.parse/S01-05/reproducer.js
function foo(bar) {
  bar = JSON.parse(JSON.stringify(bar)); // Noncompliant: if bar === undefined
}

foo();
